2005-05-06  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnltimeline.c:
	Added "src_%s" PadTemplate so _request_new_pad() works...
	
	* gnl/gnl.c: 
	* gnl/gnl.h:
	* gnl/gnlcomposition.c:
	* gnl/gnlobject.c:
	* gnl/gnloperation.c:
	* gnl/gnltimeline.c:
	No more using global "gnonlin" debug category, using element specific categories

	* docs/libs/tmpl/gnloperation.sgml: added "element" property documentation

	* docs/libs/gnonlin-sections.txt: removed GST_CAT_DEFAULT

2005-05-06  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnltimeline.c:
	Implemented GstElement->request_new_pad() in order to get a pad
	corresponding to a composition using standard API.
	Implement GstBin->add_element() in order to add a composition to the
	timeline using standard API.

	* gnl/gnloperation.c:
	GstElement of a GnlOperation can now be set/get using the "element" 
	property

2005-04-19  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlcomposition.c: 
	gnl_composition_dispose was superfluous, now removed

2005-04-12  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac: releasing 0.2.0 !!

2005-04-06  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnltimeline.c: (gnl_timeline_query):
	Prevent a segfault when querying position before anything is scheduled.
	Patch by Wouter Paesen.

	* gnl/gnlcomposition.c: (gnl_composition_schedule_operation): 
	Fixe scheduling when there's a gap between the operation's priority and
	the child object's priority. Patch by Wouter Paesen.

2005-04-06  Edward Hervey  <bilboed@bilboed.com>

	* gnonlin-config.in: 
	forgot to update it with new values

	* gnl/gnlsource.c: (source_getfunction):
	gcc-2.95.* compilation error

2005-04-04  Edward Hervey  <bilboed@bilboed.com>

	* test/sourcetest2.c:
	* test/pipelines.c: 
	updated to new api

	* test/Makefile.am: commenting out extra tests

	* gnl/gnlobject.c: (gnl_object_covers):	
	added gtk-doc comment

	* docs/libs/Makefile.am: corrections for distcheck

2005-03-31  Edward Hervey  <bilboed@bilboed.com>
