@@ -1,5 +1,10 @@
 2005-05-06  Edward Hervey  <bilboed@bilboed.com>
 
+	* gnl/gnlsource.c:
+	No more using global "gnonlin" debug category, using element specific categories
+
+2005-05-06  Edward Hervey  <bilboed@bilboed.com>
+
 	* gnl/gnltimeline.c:
 	Added "src_%s" PadTemplate so _request_new_pad() works...
 	
